# bitcoinpurple-source

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  configure.ac  libbitcoinpurpleconsensus.pc.in
doc/man/: Makefile.am  bitcoinpurple-cli.1  bitcoinpurple-qt.1  bitcoinpurple-tx.1  bitcoinpurple-util.1  bitcoinpurple-wallet.1  bitcoinpurpled.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  bitcoinpurple-chainstate.cpp  bitcoinpurple-cli-res.rc  bitcoinpurple-cli.cpp  bitcoinpurple-tx-res.rc  bitcoinpurple-tx.cpp  bitcoinpurple-util-res.rc  bitcoinpurple-util.cpp  bitcoinpurple-wallet-res.rc  bitcoinpurple-wallet.cpp  bitcoinpurpled-res.rc  bitcoinpurpled.cpp  blockencodings.h  blockfilter.h  chain.h  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compressor.cpp  (+80 more)
src/bench/: .gitignore  bench.h  bench_bitcoinpurple.cpp  ccoins_caching.cpp  coin_selection.cpp  data.h  verify_script.cpp  wallet_create_tx.cpp
src/common/: bloom.h  init.cpp  init.h  run_command.cpp  run_command.h  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.h
src/consensus/: amount.h  consensus.h  merkle.h  params.h  tx_check.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.h  hmac_sha256.h  hmac_sha512.h  muhash.h  poly1305.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha3.h  sha512.h  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.h  coinstatsindex.h  disktxpos.h  txindex.h
src/init/: bitcoinpurple-gui.cpp  bitcoinpurple-node.cpp  bitcoinpurple-qt.cpp  bitcoinpurpled.cpp  common.cpp  common.h
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  node.h  wallet.h
src/ipc/: context.h  exception.h  process.h  protocol.h
src/kernel/: bitcoinpurplekernel.cpp  blockmanager_opts.h  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.h  coinstats.h  context.h  cs_main.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.h  validation_cache_sizes.h
src/logging/: timer.h
src/minisketch/: README.md
src/node/: blockmanager_args.h  blockstorage.h  caches.h  chainstate.h  chainstatemanager_args.h  coin.h  coins_view_args.h  connection_types.h  context.h  database_args.h  eviction.h  interface_ui.h  interfaces.cpp  mempool_args.h  mempool_persist_args.h  miner.h  minisketchwrapper.h  psbt.h  transaction.cpp  transaction.h  txreconciliation.h  utxo_snapshot.h  validation_cache_args.h
src/policy/: feerate.h  fees.cpp  fees.h  fees_args.h  packages.h  policy.cpp  policy.h  rbf.h  settings.h
src/primitives/: block.h  transaction.h
src/qt/: README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoinpurple.cpp  bitcoinpurple.h  bitcoinpurple.qrc  bitcoinpurple_locale.qrc  bitcoinpurpleaddressvalidator.cpp  bitcoinpurpleaddressvalidator.h  bitcoinpurpleamountfield.cpp  bitcoinpurpleamountfield.h  bitcoinpurplegui.cpp  bitcoinpurplegui.h  bitcoinpurplestrings.cpp  bitcoinpurpleunits.cpp  bitcoinpurpleunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  (+64 more)
src/rpc/: blockchain.cpp  blockchain.h  client.h  external_signer.cpp  mempool.h  mining.cpp  mining.h  net.cpp  node.cpp  output_script.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.h  server_util.h  signmessage.cpp  util.cpp  util.h
src/script/: bitcoinpurpleconsensus.cpp  bitcoinpurpleconsensus.h  descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  miniscript.h  script.cpp  script.h  script_error.h  sigcache.h  sign.h  signingprovider.h  standard.h
src/secp256k1/: CHANGELOG.md  Makefile.am  README.md  SECURITY.md  configure.ac  libsecp256k1.pc.in
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: Makefile.am  README.md  addrman_tests.cpp  amount_tests.cpp  argsman_tests.cpp  blockmanager_tests.cpp  compress_tests.cpp  crypto_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  logging_tests.cpp  main.cpp  merkle_tests.cpp  miner_tests.cpp  miniscript_tests.cpp  net_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  script_tests.cpp  scriptnum10.h  settings_tests.cpp  streams_tests.cpp  system_tests.cpp  txpackage_tests.cpp  util_tests.cpp  util_threadnames_tests.cpp  validationinterface_tests.cpp
src/util/: asmap.h  bip32.h  bitdeque.h  bytevectorhash.h  check.cpp  check.h  epochguard.h  error.h  exception.cpp  exception.h  fastrange.h  fees.h  fs.h  fs_helpers.cpp  fs_helpers.h  getuniquepath.h  golombrice.h  hash_type.h  hasher.h  macros.h  message.cpp  message.h  moneystr.h  overflow.h  overloaded.h  rbf.h  readwritefile.h  result.h  serfloat.h  settings.h  sock.h  spanparsing.h  strencodings.h  string.h  syscall_sandbox.cpp  syscall_sandbox.h  syserror.cpp  syserror.h  system.cpp  system.h  (+13 more)
src/wallet/: bdb.cpp  bdb.h  coincontrol.h  coinselection.h  context.h  crypter.cpp  crypter.h  db.cpp  db.h  dump.cpp  dump.h  external_signer_scriptpubkeyman.cpp  external_signer_scriptpubkeyman.h  feebumper.h  fees.h  load.h  receive.h  salvage.cpp  salvage.h  scriptpubkeyman.h  spend.h  sqlite.h  transaction.h  types.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  wallettool.h  walletutil.h
src/zmq/: zmqabstractnotifier.h  zmqnotificationinterface.h  (+3 more)
(+739 files in other folders)
