dist_man1_MANS=

if BUILD_BITCOINPURPLED
  dist_man1_MANS+=bitcoinpurpled.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoinpurple-qt.1
endif

if BUILD_BITCOINPURPLE_CLI
  dist_man1_MANS+=bitcoinpurple-cli.1
endif

if BUILD_BITCOINPURPLE_TX
  dist_man1_MANS+=bitcoinpurple-tx.1
endif

if BUILD_BITCOINPURPLE_UTIL
  dist_man1_MANS+=bitcoinpurple-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOINPURPLE_WALLET
  dist_man1_MANS+=bitcoinpurple-wallet.1
endif
endif
